# surf2

./: .gitignore  .lefthook.toml  Cargo.toml  README.md  Taskfile.dist.yaml  deny.toml  justfile  sonar-project.properties  treefmt.toml
.github/workflows/: changelog.yaml  cross-build.yaml  dependency-review.yml  health.yaml  licenses.yaml  lint.yaml  release-packaging.yaml  scorecard.yaml  security.yaml  test-with-coverage.yaml
backpack/: Cargo.toml
backpack/src/: lib.rs  main.rs  surf2.rs
xtask/: Cargo.toml
