[package]
name = "surf2"
version = "0.1.0"
authors = ["test@example.com"]
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "test2"
path = "src/main.rs"

[features]
coverage = []

[dev-dependencies]
demonstrate = "*"
async-attributes = "*"
async-std = "*"
pretty_assertions = "*"

[dependencies]
human-panic = "2.0.2"
ureq = { version = "3.0.12", features = ["json", "platform-verifier"] }
